--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
-    "name": "engine-munger",
-    "version": "0.0.1",
-    "description": "An engine munger",
-    "main": "index.js",
-    "author": {
-        "name": "Poornima Venkatakrishnan",
-        "email": "pvenkatakrishnan@paypal.com"
-    },
-    "dependencies": {
-
-    },
-    "devDependencies": {
-        "mocha": "~1.9.0",
-        "chai": "~1.5.0",
-        "grunt": "~0.4.2",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-jshint": "~0.8.0",
-        "grunt-simple-mocha": "~0.4.0",
-        "dustjs-linkedin": "~2.0.0",
-        "dustjs-helpers": "~1.1.1"
-    },
-    "peerDependencies": {
-        "dustjs-linkedin": "~2.0.0"
-    },
-    "scripts": {
-        "test": "grunt test"
-    }
+  "name": "engine-munger",
+  "version": "0.0.1",
+  "description": "An engine munger",
+  "main": "index.js",
+  "author": {
+    "name": "Poornima Venkatakrishnan",
+    "email": "pvenkatakrishnan@paypal.com"
+  },
+  "dependencies": {
+      "localizr": "git://github.com/totherik/localizr.git",
+      "graceful-fs": "~2.0.1"
+  },
+  "devDependencies": {
+    "tape": "~2.4.2",
+     "karka": "git://github.com/pvenkatakrishnan/karka.git"
+  },
+  "peerDependencies": {
+    "dustjs-linkedin": "~2.0.0",
+    "adaro":"~1.0.1"
+  },
+  "scripts": {
+    "test": "grunt test"
+  }
 }
