--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "engine-munger",
   "version": "0.0.1",
-  "description": "An engine munger for kraken", 
+  "description": "An engine munger for kraken",
   "main": "index.js",
   "author": {
     "name": "Poornima Venkatakrishnan",
@@ -19,7 +19,8 @@
     "adaro": "~0.1.5",
     "istanbul": "~0.2.4",
     "jshint": "~2.4.3",
-    "mockery": "~1.4.0"
+    "mockery": "~1.4.0",
+    "dustjs-helpers": "~1.2.0"
   },
   "peerDependencies": {
     "dustjs-linkedin": "~2.0.0",
