--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "istanbul": "~0.2.4",
     "jshint": "~2.4.3",
     "mockery": "~1.4.0",
-    "dustjs-helpers": "~1.2.0"
+    "dustjs-helpers": "~1.2.0",
+    "sandboxed-module": "~0.3.0"
   },
   "peerDependencies": {
     "dustjs-linkedin": "~2.0.0",
