--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "engine-munger",
   "version": "0.0.1",
-  "description": "An engine munger for kraken",
+  "description": "An engine munger for express apps.",
   "main": "index.js",
   "author": {
     "name": "Poornima Venkatakrishnan",
@@ -10,21 +10,22 @@
   "dependencies": {
     "graceful-fs": "~2.0.1",
     "concat-stream": "~1.4.1",
-    "karka": "git://github.com/pvenkatakrishnan/karka.git#karka-without-context",
+    "karka": "git://github.com/pvenkatakrishnan/karka.git",
     "localizr": "git://github.com/totherik/localizr.git",
     "fileResolver": "git://github.com/pvenkatakrishnan/fileResolver.git"
   },
   "devDependencies": {
     "tape": "~2.4.2",
     "adaro": "~0.1.5",
+    "dustjs-linkedin": "^2.0.0",
+    "dustjs-helpers": "~1.2.0",
     "istanbul": "~0.2.4",
     "jshint": "~2.4.3",
     "mockery": "~1.4.0",
-    "dustjs-helpers": "~1.2.0",
     "freshy": "git://github.com/totherik/freshy.git"
   },
   "peerDependencies": {
-    "dustjs-linkedin": "~2.0.0",
+    "dustjs-linkedin": "^2.0.0",
     "adaro": "~0.1.5"
   },
   "scripts": {
