--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "file-resolver": "^1.0.0",
     "graceful-fs": "~2.0.1",
     "karka": "~0.0.1",
-    "localizr": "~1.0.0",
-    "verror": "^1.6.0"
+    "verror": "^1.6.0",
+    "localizr": "^1.0.0"
   },
   "devDependencies": {
     "tape": "~2.4.2",
