--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "url": "https://github.com/krakenjs/engine-munger.git"
   },
   "dependencies": {
+    "bl": "^0.9.0",
+    "file-resolver": "~0.0.1",
     "graceful-fs": "~2.0.1",
-    "concat-stream": "~1.4.1",
     "karka": "~0.0.1",
-    "localizr": "~0.1.0",
-    "file-resolver": "~0.0.1"
+    "localizr": "~0.1.0"
   },
   "devDependencies": {
     "tape": "~2.4.2",
