Use permutron to do path permutations

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graceful-fs": "~2.0.1",
     "karka": "~0.0.1",
     "localizr": "~1.0.0",
+    "permutron": "^1.0.0",
     "verror": "^1.6.0"
   },
   "devDependencies": {
