--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "engine-munger",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "An engine munger for express apps.",
   "main": "index.js",
   "author": {
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "bl": "^0.9.0",
-    "file-resolver": "~0.0.1",
+    "file-resolver": "^1.0.0",
     "graceful-fs": "~2.0.1",
     "karka": "~0.0.1",
     "localizr": "~0.1.0"
