--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "engine-munger",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "An engine munger for express apps.",
   "main": "index.js",
   "author": {
@@ -16,7 +16,8 @@
     "file-resolver": "^1.0.0",
     "graceful-fs": "~2.0.1",
     "karka": "~0.0.1",
-    "localizr": "~1.0.0"
+    "localizr": "~1.0.0",
+    "verror": "^1.6.0"
   },
   "devDependencies": {
     "tape": "~2.4.2",
