--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "devDependencies": {
     "tape": "~2.4.2",
     "adaro": "~0.1.5",
-    "dustjs-linkedin": "^2.0.0",
-    "dustjs-helpers": "~1.2.0",
+    "dustjs-linkedin": "~2.5.1",
+    "dustjs-helpers": "~1.5.0",
     "istanbul": "~0.2.4",
     "jshint": "~2.4.3",
     "mockery": "~1.4.0",
