--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "adaro": "1.0.0-2",
     "bl": "^0.9.0",
     "debuglog": "^1.0.1",
+    "express": "^4.12.4",
     "file-resolver": "^1.0.0",
     "graceful-fs": "~2.0.1",
     "karka": "~0.0.1",
@@ -22,11 +23,12 @@
     "verror": "^1.6.0"
   },
   "devDependencies": {
+    "freshy": "0.0.2",
     "istanbul": "~0.2.4",
     "jshint": "~2.4.3",
     "mockery": "~1.4.0",
-    "freshy": "0.0.2",
     "nyc": "^2.0.5",
+    "supertest": "^1.0.1",
     "tap": "^1.0.8"
   },
   "scripts": {
