--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "verror": "^1.6.0"
   },
   "devDependencies": {
-    "tape": "~2.4.2",
     "istanbul": "~0.2.4",
     "jshint": "~2.4.3",
     "mockery": "~1.4.0",
-    "freshy": "0.0.2"
+    "freshy": "0.0.2",
+    "tap": "^1.0.8"
   },
   "scripts": {
-    "test": "tape test/*.js && npm run lint",
-    "cover": "istanbul cover tape -- test/*.js",
+    "test": "tap test/*.js && npm run lint",
+    "cover": "istanbul cover tap -- test/*.js",
     "lint": "jshint -c .jshintrc index.js lib/ view/"
   },
   "bugs": {
