--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "adaro": "1.0.0-2",
+    "aproba": "^1.0.1",
     "bl": "^0.9.0",
     "debuglog": "^1.0.1",
     "express": "^4.12.4",
@@ -20,6 +21,7 @@
     "graceful-fs": "~2.0.1",
     "karka": "~0.0.1",
     "localizr": "^1.0.0",
+    "permutron": "^1.3.1",
     "verror": "^1.6.0"
   },
   "devDependencies": {
