--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "adaro": "1.0.0-2",
     "aproba": "^1.0.1",
+    "bcp47": "^1.1.2",
+    "bcp47-stringify": "^1.0.0",
     "bl": "^0.9.0",
     "debuglog": "^1.0.1",
     "express": "^4.12.4",
