--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "test": "nyc tap test/*.js && npm run lint",
     "cover": "nyc report",
-    "lint": "jshint -c .jshintrc index.js lib/ view/"
+    "lint": "jshint -c .jshintrc index.js lib/"
   },
   "bugs": {
     "url": "https://github.com/krakenjs/engine-munger/issues"
