--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graceful-fs": "~2.0.1",
     "karka": "~0.0.1",
     "permutron": "^1.3.1",
+    "resolve": "^1.1.6",
     "verror": "^1.6.0"
   },
   "devDependencies": {
