--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "engine-munger",
-  "version": "1.0.0-4",
+  "version": "1.0.0",
   "description": "A replacement Express view class that provides asynchronous resolution, internationalization and specialization support",
   "main": "index.js",
   "author": {
