--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: node_js
-
 node_js:
-  - "0.12"
-  - "0.10"
   - "4"
-  - "5"
-
+  - "6"
+  - "8"
 script:
-  - "npm run-script cover"
-
-sudo: false
+  - "npm run lint"
+  - "npm run cover"
